--- a/test.html
+++ b/test.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Test</title>
     <script src="cycles.js"></script>
+    <script src="array.js"></script>
+    <script src="functions.js"></script>
+    <script src="local_global_var.js"></script>
+    <!--<script src="alert_confirm_prompt.js"></script>-->
 </head>
 <body>
 <H2>Variables:</H2>
