update test project

--- a/events.html
+++ b/events.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Events</title>
      <script src="event_handler.js"></script>
-    <script src="functionsMath.js"></script>
+
+
 
 </head>
 <body >
@@ -13,5 +14,8 @@
   <input type="button" name="beautifilButton" value="Click me" onclick="button_click(this)"/>
 
   <p onmouseover="counter(this)">На этот текст было наведено 0 раз</p>
+
+<script src="functionsMath.js"></script>
+<script src="Date.js"></script>
 </body>
 </html>
