--- a/test.html
+++ b/test.html
@@ -5,8 +5,10 @@
     <title>Test</title>
     <script src="cycles.js"></script>
     <script src="array.js"></script>
+    <script src="arrays2.js"></script>
     <script src="functions.js"></script>
     <script src="local_global_var.js"></script>
+     <script src="string.js"></script>
     <!--<script src="alert_confirm_prompt.js"></script>-->
 </head>
 <body>
