--- a/files.html
+++ b/files.html
@@ -7,8 +7,16 @@
     <!--<script type="text/javascript" src="data.json"></script>-->
 </head>
 <body>
+    <form id="find_form">
+        <div class="search-block">
+            <label for="search">Find user</label>
+            <input type="text" title="HTML<br>подсказка" id="search" name="searchfield">
+            <button type="submit" value="Search" id="search-button">Search</button>
+            <button type="button" value="ClearAll" id="clear-button">Clear all</button>
+        </div>
+	</form>
   <div id="app"></div>
   <script src="files2.js"></script>
- <!--<img src="img/pig.jpg">-->
+ <!--<images src="images/pig.jpg">-->
 </body>
 </html>
