--- a/codesandbox_training/files.html
+++ b/codesandbox_training/files.html
@@ -10,13 +10,14 @@
     <form id="find_form">
         <div class="search-block">
             <label for="search">Find user</label>
-            <input type="text" title="HTML<br>подсказка" id="search" name="searchfield">
+            <input type="text" title="HTML<br>подсказка" id="search" name="searchfield" data-tooltip="введитеимя пользователя">
             <button type="submit" value="Search" id="search-button">Search</button>
             <button type="button" value="ClearAll" id="clear-button">Clear all</button>
+             <button type="button" value="Sort" id="sort-button">Sort</button>
         </div>
 	</form>
   <div id="app"></div>
-  <script src="files2.js"></script>
+  <script src="filter.js"></script>
  <!--<images src="images/pig.jpg">-->
 </body>
 </html>
