--- a/egghead/start_learniing_react/public/index.html
+++ b/egghead/start_learniing_react/public/index.html
@@ -8,7 +8,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json">-->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -22,9 +22,9 @@
     <title>React App</title>
   </head>
   <body>
-    <!--<noscript>-->
-      <!--You need to enable JavaScript to run this app.-->
-    <!--</noscript>-->
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
