--- a/JS/mozillaOrgTutorial/calendar.html
+++ b/JS/mozillaOrgTutorial/calendar.html
@@ -5,6 +5,10 @@
     <title>Calendar</title>
 </head>
 <body>
+        <select id="theme">
+                <option value="white">White</option>
+                <option value="black">Black</option>
+              </select>
 <script src="calendar.js"></script>
 </body>
 </html>
